<?xml version="1.0"?>
<package>

    <name>person_detection</name>
    <version>0.0.0</version>
    <description>person_detection</description>

    <maintainer email="ruppel@informatik.uni-hamburg.de">Philipp Ruppel</maintainer>
    <author email="ruppel@informatik.uni-hamburg.de">Philipp Ruppel</author>

    <license>...</license>

    <buildtool_depend>catkin</buildtool_depend>

    <build_depend>message_runtime</build_depend>
    <run_depend>message_runtime</run_depend>

    <build_depend>roscpp</build_depend>
    <run_depend>roscpp</run_depend>

    <build_depend>rospy</build_depend>
    <run_depend>rospy</run_depend>

    <build_depend>tf</build_depend>
    <run_depend>tf</run_depend>

    <build_depend>tf_conversions</build_depend>
    <run_depend>tf_conversions</run_depend>

    <build_depend>robot_state_publisher</build_depend>
    <run_depend>robot_state_publisher</run_depend>

    <build_depend>visualization_msgs</build_depend>
    <run_depend>visualization_msgs</run_depend>

    <build_depend>sensor_msgs</build_depend>
    <run_depend>sensor_msgs</run_depend>

    <build_depend>cv_bridge</build_depend>
    <run_depend>cv_bridge</run_depend>

    <build_depend>opencv2</build_depend>
    <run_depend>opencv2</run_depend>

    <export>
    </export>

</package>
